# OxNginx

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  README.md
backend/: Cargo.toml  config.toml
backend-gui/: Cargo.toml  README.md  build.rs  tauri.conf.json  updater.key.pub
backend-gui/capabilities/: default.json
backend-gui/src/: logging.rs  main.rs  process.rs  tray.rs
backend-gui/ui/: index.html
backend/configs/: config.example.toml
backend/macros/: Cargo.toml
backend/macros/src/: audit_log.rs  check_permission.rs  check_role.rs  lib.rs  parser.rs
backend/src/: main.rs
backend/src/api/: access_api.rs  auth_api.rs  backup_api.rs  config_api.rs  dashboard_api.rs  dashboard_ws.rs  file_api.rs  log_api.rs  mod.rs  nginx_api.rs  rbac_api.rs  reverse_proxy_api.rs  settings_api.rs  site_api.rs  site_backup_api.rs  sys_dept_api.rs  sys_dict_api.rs  sys_i18n_api.rs  sys_menu_api.rs  sys_post_api.rs  sys_role_api.rs  sys_user_api.rs  template_api.rs  terminal_api.rs  upstream_api.rs
backend/src/app/: mod.rs  openapi.rs  router.rs  state.rs
backend/src/audit/: context.rs  event.rs  middleware.rs  mod.rs  sender.rs  worker.rs
backend/src/auth/: mod.rs
backend/src/backup/: mod.rs
backend/src/config/: mod.rs
backend/src/database/: mod.rs  seed.rs  seed_i18n.rs  seed_menu.rs
backend/src/dto/: file_dto.rs  mod.rs
backend/src/gui/: mod.rs  tray.rs  window.rs
backend/src/middleware/: error_handler.rs  mod.rs
backend/src/model/: mod.rs
backend/src/modules/: mod.rs
backend/src/modules/auth/controller/: auth_controller.rs
backend/src/modules/auth/dao/: mod.rs  token_dao.rs
backend/src/modules/auth/entity/: token.rs
backend/src/modules/auth/service/: mod.rs  token_service.rs
backend/src/modules/backup/controller/: backup_controller.rs  mod.rs
backend/src/modules/backup/dao/: backup_dao.rs  mod.rs
backend/src/modules/backup/entity/: backup.rs
backend/src/modules/backup/service/: backup_service.rs  mod.rs
backend/src/modules/common/: enums.rs  mod.rs
backend/src/modules/common/audit/: context.rs  event.rs  middleware.rs  sender.rs  worker.rs
backend/src/modules/common/auth/: mod.rs
backend/src/modules/common/config/: mod.rs
backend/src/modules/common/database/: mod.rs  seed.rs  seed_i18n.rs  seed_menu.rs  seed_menu_json.rs
backend/src/modules/common/dto/: mod.rs
backend/src/modules/common/middleware/: mod.rs
backend/src/modules/common/nginx/: common_directives.rs  ensure_include.rs  mod.rs  nginx_config_from_db.rs  process.rs  site_config.rs  upstream.rs
backend/src/modules/common/util/: cert_service.rs  datetime.rs  excel.rs  mod.rs  ua_parser.rs
backend/src/modules/dashboard/controller/: dashboard_controller.rs  dashboard_ws.rs  mod.rs
backend/src/modules/dashboard/service/: dashboard_service.rs  mod.rs
backend/src/modules/database/: mod.rs
backend/src/modules/database/controller/: database_controller.rs  mod.rs  sqlite_controller.rs
backend/src/modules/database/dao/: database_dao.rs  mod.rs
backend/src/modules/database/entity/: database.rs
backend/src/modules/database/service/: database_service.rs  mod.rs  sqlite_service.rs
backend/src/modules/file/controller/: file_controller.rs
backend/src/modules/file/service/: file_service.rs
backend/src/modules/log/: mod.rs
backend/src/modules/log/controller/: log_controller.rs  mod.rs
backend/src/modules/log/dao/: log_dao.rs  mod.rs
backend/src/modules/log/entity/: log.rs
backend/src/modules/log/service/: log_service.rs
backend/src/modules/nginx/controller/: mod.rs  nginx_controller.rs
backend/src/modules/settings/controller/: config_controller.rs  mod.rs  settings_controller.rs
backend/src/modules/site/controller/: access_controller.rs  cert_controller.rs  mod.rs  reverse_proxy_controller.rs  site_backup_controller.rs  site_controller.rs  site_controller_batch.rs  site_controller_ssl.rs  template_controller.rs  upstream_controller.rs
backend/src/modules/site/dao/: access_dao.rs  cert_dao.rs  mod.rs  reverse_proxy_dao.rs  site_dao.rs  template_dao.rs  upstream_dao.rs
backend/src/modules/site/entity/: access.rs  certificate.rs  mod.rs  reverse_proxy.rs  site.rs  template.rs  upstream.rs
backend/src/modules/site/service/: access_service.rs  cert_service.rs  (+6 more)
backend/src/modules/websocket/: dashboard_push.rs  hub.rs  mod.rs  protocol.rs  terminal.rs
backend/src/nginx/: mod.rs
backend/src/service/: access_service.rs  backup_service.rs  cert_service.rs  dashboard_service.rs  file_service.rs  log_service.rs  mod.rs  rbac_service.rs  reverse_proxy_service.rs  site_backup_service.rs  site_service.rs  sys_dept_service.rs  sys_dict_service.rs  sys_i18n_service.rs  sys_menu_service.rs  sys_post_service.rs  sys_role_service.rs  sys_user_service.rs  system_service.rs  template_service.rs  token_service.rs  upstream_service.rs
backend/src/ssl/: mod.rs
backend/src/startup/: logging.rs  mod.rs  setup.rs
backend/src/util/: cmd.rs  mod.rs
backend/tests/: demo.rs
backend/tools/: patch_i18n.py  rewrite_frontend_i18n_v2.py
(+236 files in other folders)
