[package]
name = "ox-nginx"
version = "1.0.0"
edition = "2021"
description = "轻量级Nginx可视化管理面板"

[profile.release]
# LTO (Link Time Optimization): 跨 crate 链接时优化，减小二进制体积
lto = true
# 单码元生成单元：更好的优化效果，但编译更慢
codegen-units = 1
# 优化级别：z = 优化体积优先，s = 优化大小，2 = 平衡
opt-level = "z"
# 剥离调试符号和DWARF信息
strip = true

[dependencies]
# Web框架
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 数据库
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }

# 认证
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"

# 配置
toml = "0.8"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 错误处理
anyhow = "1"
thiserror = "1"

# UUID
uuid = { version = "1", features = ["v4"] }

# 时间
chrono = { version = "0.4", features = ["serde"] }

# 系统信息
num_cpus = "1"
sysinfo = "0.31"

