[package]
name = "ox-nginx"
version = "1.0.0"
edition = "2021"
description = "轻量级Nginx可视化管理面板"

[package.metadata.packager]
productName = "OxNginx"
identifier = "cn.jhyjhy.oxnginx"
beforePackagingCommand = "cargo build --release"
outDir = "../build"

[profile.release]
# LTO (Link Time Optimization): 跨 crate 链接时优化，减小二进制体积
lto = true
# 单码元生成单元：更好的优化效果，但编译更慢
codegen-units = 1
# 优化级别：z = 优化体积优先，s = 优化大小，2 = 平衡
opt-level = "z"
# 剥离调试符号和DWARF信息
strip = true

[dependencies]
# 宏
ox-nginx-macros = { path = "macros" }

# Web框架
axum = { version = "0.8", features = ["macros", "ws"] }
tokio = { version = "1", features = ["full", "process"] }
tower = "0.5"
tower-http = { version = "0.7", features = ["cors", "fs"] }

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"

# 数据库
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }

# 认证
argon2 = "0.5"
rand = "0.8"
hex = "0.4"
rsa = "0.9"
base64 = "0.22"

# 配置
toml = "1"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# 错误处理
anyhow = "1"
thiserror = "2"

# UUID
uuid = { version = "1", features = ["v4"] }

# 时间
chrono = { version = "0.4", features = ["serde"] }

# 系统信息
num_cpus = "1"
sysinfo = "0.39"

# zip 解压（首次运行 setup 用 + 文件管理压缩）
zip = "8.6"

# 文件压缩/解压（tar.gz）
flate2 = "1"
tar = "0.4"

# Linux 用户/组名解析
[target.'cfg(unix)'.dependencies]
uzers = "0.12"

# Windows API
[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "libloaderapi", "consoleapi"] }

# 伪终端
portable-pty = "0.9"
